# KnoziChat-Backend

./: .env.example  .env.template  .gitignore  Dockerfile  README.md  biome.json  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
ai-server/: .env.template  pyproject.toml  test_request_body.json
ai-server/src/: main.py  schemas.py  settings.py
ai-server/src/models/: chat.py  group.py  user.py
ai-server/src/utils/: embedding_utils.py  llm_utils.py  test.py
ai-service/: Dockerfile  Makefile  pyproject.toml
ai-service/src/: ai_pb2.py  ai_pb2.pyi  ai_pb2_grpc.py  env.py  main.py  schemas.py  server.py  settings.py
ai-service/src/handlers/: grpc_handlers.py
ai-service/src/models/: __init__.py  chat.py  conversation.py  group.py  user.py
ai-service/src/services/: ai_service.py
ai-service/src/utils/: __init__.py  embedding_utils.py  extras.py  llm_utils.py
apps/: app.controller.ts  app.module.ts  env.ts  main.ts
apps/ai/: ai.controller.ts  ai.module.ts  ai.service.ts  embed.processor.ts
apps/auth/: auth.module.ts
apps/chat/: chat.gateway.ts  chat.module.ts
apps/configs/: bull-mq.config.ts  cache.config.ts  open-api.config.ts  throttler.config.ts
apps/sync/: sync.controller.ts  sync.module.ts  sync.service.ts
apps/uploads/: uploads.controller.ts  uploads.service.ts
apps/user/: user.controller.ts  (+2 more)
docs/: streaming-comparison.md
proto/: ai.proto
src/: app.controller.ts  app.module.ts  app.service.ts  app.ts  env.ts  index.ts  main.ts
test/: app.e2e-spec.ts  socket-concurrent.e2e-spec.ts
(+378 files in other folders)
