[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "langchain-google-genai>=4.2.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]
